--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -126,6 +126,7 @@ header {
                 overflow-y: auto;
                 left: 0;
                 transition: left 0.3s;
+                z-index: 10;
 
                 .pages {
                     display: flex;
